[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "chatgpt-cli"
version = "0.1.0"
description = "Simple command line tool for chatting with ChatGPT using the official API"
authors = ["Marco Lardera", "Daniel Souza"] # run 'git shortlog -sne' to get a better list 
homepage = "https://github.com/danisztls/chatgpt-cli"
readme = "README.md"
packages = [
  { include = "chatgpt-cli" },
]

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.1"
certifi = "^2022.12.7"
charset-normalizer = "^3.1"
click = "^8.1"
idna = "^3.4"
markdown-it-py = "^2.2"
mdurl = "^0.1"
mypy-extensions = "^1.0"
packaging = "^23.0"
pathspec = "0.11"
platformdirs = "^3.1"
prompt-toolkit = "^3.0"
Pygments = "^2.14"
PyYAML = "^6.0"
requests = "^2.28"
rich = "^13.4"
tomli = "^2.0"
typing_extensions = "^4.6"
urllib3 = "^1.26"
wcwidth = "0.2"
